--- a/css/style.css
+++ b/css/style.css
@@ -456,24 +456,24 @@ display: flex;
   text-align: center;
 }
 #i1{
-  background-image: url(../img/tomates.jpg);
+  background-image: url('img/tomates.jpg');
   background-repeat: no-repeat;
   background-size:cover;
   
 }
 #i2{
-  background-image: url(../img/herbes.jpg);
+  background-image: url('../img/herbes.jpg');
   background-repeat: no-repeat;
   background-size:cover;
 }
 #i3{
-  background-image: url(../img/pommes.jpeg);
+  background-image: url('../img/pommes.jpeg');
   background-repeat: no-repeat;
   position: center;
   background-size:cover;
 }
 #i4{
-  background-image: url(../img/frouges.jpg);
+  background-image: url('../img/frouges.jpg');
   background-repeat: no-repeat;
   background-size:cover;
 }
