--- a/PAGES/page d'accueil/css/style.css
+++ b/PAGES/page d'accueil/css/style.css
@@ -9,6 +9,7 @@ body{
   background-color: #F3F4BC;
   overflow-x: hidden;
   width: 100%;
+  text-decoration:none;
 }
 h2{
     color: #1E5128;
@@ -239,7 +240,7 @@ input{
   }
   
   #carousel__slide1 {
-    background-image:url(../img/verdate.PNG);
+    background-image:url("../img/verdate.PNG");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 50%;
@@ -265,7 +266,7 @@ input{
     background-color: #E9DCA9;
   }
   #carousel__slide3 {
-    background-image:url(../img/bios.PNG);
+    background-image:url("../img/bios.PNG");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 50%;
@@ -283,15 +284,7 @@ input{
     font-size: 2em;
   }
 
-  /* .carousel__snapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    scroll-snap-align: center;
-  }
-   */
+
  
   
   @media (hover: hover) {
@@ -369,7 +362,7 @@ input{
     right: -1rem;
   }
   
-  .carousel::before,
+ .carousel::before,
   .carousel::after {
     content: '';
     z-index: 1;
@@ -382,8 +375,8 @@ input{
     line-height: 4rem;
     text-align: center;
     pointer-events: none;
-  }
   
+  }
   .carousel::before {
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
     opacity: 0.2;
@@ -397,7 +390,7 @@ input{
   .produit{margin-bottom: 2cm; }
 .phraseg{
   position: relative;
-  width: 40%;
+  width: 100%;
   height: 70%;
   margin-left: 10px;
   margin-right: 10px;
@@ -405,19 +398,24 @@ input{
   font-family: Roboto;
   font-style: normal;
   font-weight: 300;
-  font-size: 80px;
+  font-size: 70px;
   line-height: 141px;
   text-transform: uppercase;
 }
 .contimg {
 display: flex;
 }
-.phraseg p{
+.phraseg a{
   font-weight: bold;
   color: #1E5128;
-
+  text-decoration: none;
 }
 
+.phraseg a:hover{
+  font-weight: bold;
+  color: #b68f03;
+  text-decoration: none;
+}
 .buttonprod{
   background-color: #4CAF50; /* Green */
   border: none;
@@ -434,7 +432,7 @@ display: flex;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-.produit button:hover {
+.produit .buttonprod:hover {
   background-color:#b68f03;
   color: black;
 }
@@ -629,3 +627,4 @@ footer{height:300px ;}
 .speltfooter{ position: absolute;}
 footer{height:300px ;}
 }
+
